# poetry-to-requirements

./: Cargo.toml  README.md  pyproject.toml
src/: main.rs
